--- a/style/style.css
+++ b/style/style.css
@@ -460,10 +460,12 @@ footer img{
 	.f-block {
     width: 100%;
     height: auto;
+    margin-bottom: 0;
 	}
 	.s-block{
 		width: 60%;
 		margin-left: 20%;
+		margin-bottom: 40px;
 	}
 	#events{
 		display: -webkit-flex;
@@ -511,7 +513,16 @@ footer img{
 		width: 35%;
     margin-top: 40px;
 	}
+	#map{
+		height: 400px;
+		margin-bottom: 40px;
+	}
 }
+#map{
+	width: 100%;
+  height: 600px;
+}
+
 @media screen and (max-width: 500px) {
 	.c-th{
 		width: 100%;
@@ -555,6 +566,7 @@ footer img{
 	}
 	.s-block{
 		margin: 0;
+		margin-bottom: 40px;
 	}
 	.row{
 		width: 90%;
@@ -568,8 +580,8 @@ footer img{
 	.inner-foot{
 		padding-bottom: 0;
 	}
-	.iframe{
-		height: 185px;
+	#map{
+		height: 400px;
 	}
 	.half-block{
 		margin-top: 0;
