--- a/style/style.css
+++ b/style/style.css
@@ -122,6 +122,7 @@ a{
 }
 .ln2{
 	line-height: 2;
+	text-align: center;
 }
 .more{
 	padding: 10px 20px;
@@ -238,6 +239,10 @@ a{
 	-ms-align-items: center;
 	align-items: center;
 	justify-content: left;
+	transition: all 0.2s ease-in-out;
+}
+.link:hover{
+	background-color: #DD6F47;
 }
 .hundred{
 	width: 100%;
