--- a/style/style.css
+++ b/style/style.css
@@ -184,22 +184,18 @@ a{
 }
 .block{
 	width: 100%;
-	text-align: center;
-  box-shadow: 0px 9px 29px -9px rgba(0, 0, 0, 0.13);
-  transition: all .2s ease-in-out;
+    text-align: center;
+    box-shadow: 10px 9px 49px -2px rgba(0, 0, 0, 0.13);
+    transition: all .2s ease-in-out;
+    background: #eaeaea;
 }
-.block:hover .title{
-	border-left: 1.5px solid #263141;
-	border-right: 1.5px solid #263141;
-	border-bottom: 1.5px solid #263141;
-	background-color: #dcdcdc;
+.block:hover {
+    background-color: #fff;
+    box-shadow: 10px 9px 49px -2px rgba(0, 0, 0, 0.13);
+
 }
 .title{
-	font-size: 20px;
-	border-left: 1.5px solid #37465D;
-	border-right: 1.5px solid #37465D;
-	border-bottom: 1.5px solid #37465D;
-	transition: 0.1s;
+	font-size: 20px; 
 }
 .title p{
 	margin-bottom: 0;
